--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -11,5 +11,24 @@
  *= require_self
  *= require_tree .
  */
-@import "bootstrap-sprockets";
-@import "bootstrap";
+@import bootstrap-sprockets
+@import bootstrap
+
+#overlay
+  -moz-opacity: 0.5
+  -khtml-opacity: 0.5
+  opacity: 0.5
+  z-index: 998
+  width: 300px
+  height: 300px
+  background-image: image-url("spinner.gif")
+  position: fixed
+  top: 50%
+  left: 50%
+  margin-top: -150px
+  margin-left: -150px
+
+.span12
+  text-align: center
+
+
