--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+<div class="panel">
+  <div class="panel-body">
+   <%= yield %>
+   </div>
+</div>
 </body>
 </html>
